# Hexapod_Unal

./: .gitignore  README.md
launch/: hexapod.launch.py
src/cinematica_node/: package.xml  setup.cfg  setup.py
src/cinematica_node/cinematica_node/: cinematica_node.py
src/dynamixel_node/: package.xml  setup.cfg  setup.py
src/dynamixel_node/dynamixel_node/: dynamixel_node.py
src/gui_node/: package.xml  setup.cfg  setup.py
src/gui_node/gui_node/: gui_client.py
src/hexapod_interfaces/: CMakeLists.txt  package.xml
src/hexapod_interfaces/action/: Calcular.action  Posicionar.action
src/hexapod_interfaces/srv/: Activar.srv  SiguientePosicion.srv
src/hexapod_launch/: package.xml  setup.cfg  setup.py
src/hexapod_launch/launch/: hexapod_launch.py
src/simulation_node/: package.xml  setup.cfg  setup.py
src/simulation_node/simulation_node/: simulation_node.py
src/transformation_node/: package.xml  setup.cfg  setup.py
src/transformation_node/transformation_node/: transformation_node.py
vrep/: CodigoLUA.txt
