<?xml version="1.0"?>
<package format="3">
  <name>gui_node</name>
  <version>0.0.1</version>
  <description>Nodo de GUI para el hexápodo</description>
  <maintainer email="tu_correo@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
