<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="antorresca@unal.edu.co">antorresca</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>hexapod_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>